Fix all spaces-for-indentation cases I can find.