@@ -38,10 +38,8 @@ public final class CurriedFixtureTransferable implements Transferable {
 	/**
 	 * The data flavor we handle.
 	 */
-	public static final DataFlavor FLAVOR = new DataFlavor(
-																  FixtureTransferable
-																		  .class,
-																  "CurriedFixtureTransferable");
+	public static final DataFlavor FLAVOR = new DataFlavor(FixtureTransferable.class,
+														"CurriedFixtureTransferable");
 	/**
 	 * Our payload.
 	 */
@@ -53,14 +51,10 @@ public final class CurriedFixtureTransferable implements Transferable {
 	 * @param list a list of TileFixtures to be transferred
 	 */
 	public CurriedFixtureTransferable(final Collection<TileFixture> list) {
-		payload =
-				NullCleaner.assertNotNull(Collections
-												  .unmodifiableList(list.stream()
-																			.map
-																					 (FixtureTransferable::new)
-																			.collect(
-																					Collectors
-																							.toList())));
+		payload = NullCleaner.assertNotNull(Collections
+										.unmodifiableList(list.stream()
+													.map(FixtureTransferable::new)
+													.collect(Collectors.toList())));
 	}
 
 	/**
@@ -105,6 +99,6 @@ public final class CurriedFixtureTransferable implements Transferable {
 	@Override
 	public String toString() {
 		return "CurriedFixtureTransferable with payload containing " + payload.size() +
-				       " elements";
+					" elements";
 	}
 }
